# 0710_dual_arm_robot_code_English

./: .gitignore  README.md
dual_arm_alm_cg_planner/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_alm_cg_planner/config/: dual_arm_alm_cg_planning.yaml
dual_arm_alm_cg_planner/include/dual_arm_alm_cg_planner/: avoidance_system.hpp  cg_solver.hpp  data_io.hpp  planner_manager.hpp
dual_arm_alm_cg_planner/src/: avoidance_system.cpp  cg_solver.cpp  data_io.cpp  planner_manager.cpp
dual_arm_alm_cg_planner_1/: PARAMETERS.md  README.md
dual_arm_alm_cg_planner_1/src/: cg_solver.cpp
dual_arm_alm_cg_planner_1/standalone/: run_standalone.cpp
dual_arm_alm_gd_planner/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_alm_gd_planner/config/: dual_arm_alm_gd_planning.yaml
dual_arm_alm_gd_planner/include/dual_arm_alm_gd_planner/: avoidance_system.hpp  data_io.hpp  gd_solver.hpp  planner_manager.hpp
dual_arm_alm_gd_planner/src/: avoidance_system.cpp  data_io.cpp  gd_solver.cpp  planner_manager.cpp
dual_arm_alm_gd_planner_1/: PARAMETERS.md  README.md
dual_arm_alm_gd_planner_1/src/: gd_solver.cpp
dual_arm_alm_gd_planner_1/standalone/: run_standalone.cpp
dual_arm_alm_newton_planner/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_alm_newton_planner/config/: dual_arm_alm_newton_planning.yaml
dual_arm_alm_newton_planner/include/dual_arm_alm_newton_planner/: avoidance_system.hpp  data_io.hpp  newton_solver.hpp  planner_manager.hpp
dual_arm_alm_newton_planner/src/: avoidance_system.cpp  data_io.cpp  newton_solver.cpp  planner_manager.cpp
dual_arm_alm_newton_planner_1/: PARAMETERS.md  README.md
dual_arm_alm_newton_planner_1/src/: newton_solver.cpp
dual_arm_alm_newton_planner_1/standalone/: run_standalone.cpp
dual_arm_domain_bridge/: CMakeLists.txt  README.md
dual_arm_domain_bridge/include/dual_arm_domain_bridge/: multi_context.hpp
dual_arm_domain_bridge/launch/: bridge_relay.launch.py
dual_arm_domain_bridge/src/: joint_state_uplink_bridge.cpp  trajectory_downlink_endpoint_relay.cpp
dual_arm_lag_cg_planner/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_lag_cg_planner/config/: dual_arm_lag_cg_planning.yaml
dual_arm_lag_cg_planner/include/dual_arm_lag_cg_planner/: avoidance_system.hpp  cg_solver.hpp  data_io.hpp  planner_manager.hpp
dual_arm_lag_cg_planner/src/: avoidance_system.cpp  cg_solver.cpp  data_io.cpp  planner_manager.cpp
dual_arm_lag_gd_planner/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_lag_gd_planner/config/: dual_arm_lag_gd_planning.yaml
dual_arm_lag_gd_planner/include/dual_arm_lag_gd_planner/: avoidance_system.hpp  data_io.hpp  gd_solver.hpp  planner_manager.hpp
dual_arm_lag_gd_planner/src/: avoidance_system.cpp  data_io.cpp  gd_solver.cpp  planner_manager.cpp
dual_arm_lag_newton_planner/: CMakeLists.txt  PARAMETERS.md  README.md
dual_arm_lag_newton_planner/config/: dual_arm_lag_newton_planning.yaml
dual_arm_lag_newton_planner/include/dual_arm_lag_newton_planner/: avoidance_system.hpp  data_io.hpp  newton_solver.hpp  planner_manager.hpp
dual_arm_lag_newton_planner/src/: avoidance_system.cpp  data_io.cpp  newton_solver.cpp  planner_manager.cpp
hiwin_dual_arm/: README.md
hiwin_dual_arm/config/: dual_arm_1_planning.yaml.txt  dual_arm_alm_cg_1_planning.yaml  dual_arm_alm_cg_planning.yaml.txt  dual_arm_alm_gd_1_planning.yaml  dual_arm_alm_gd_planning.yaml  dual_arm_alm_newton_1_planning.yaml  dual_arm_alm_newton_planning.yaml  dual_arm_lag_gd_planning.yaml  dual_arm_lag_newton_planning.yaml  dual_arm_planning.yaml.txt  moveit.rviz  moveit_controllers.yaml
hiwin_dual_arm/launch/: brain.launch.py
hiwin_dual_arm/srcipt/: joint_state_merger.py
hiwin_dual_arm_description/urdf/: big_arm_platform.urdf.xacro  dual_hiwin_arms.urdf.xacro  small_arm_platform.urdf.xacro
